--- a/asigne/scss/fonts.scss
+++ b/asigne/scss/fonts.scss
@@ -1,18 +1,56 @@
 @font-face {
-    font-family: 'BPG Nino Mkhedruli Book';
-    src: url('../fonts/bpg-nino-mkhedruli-book-webfont.eot'); /* IE9 Compat Modes */
-    src: url('../fonts/bpg-nino-mkhedruli-book-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/bpg-nino-mkhedruli-book-webfont.woff2') format('woff2'),  Super Modern Browsers 
-         url('../fonts/bpg-nino-mkhedruli-book-webfont.woff') format('woff'), /* Pretty Modern Browsers */
-         url('../fonts/bpg-nino-mkhedruli-book-webfont.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/bpg-nino-mkhedruli-book-webfont.svg#bpg_nino_mkhedruli_bookregular') format('svg'); /* Legacy iOS */
+    font-family: 'BPG Excelsior Caps DejaVu 2010';
+    src: url('BPGExcelsiorCapsDejaVu2010.eot');
+    src: url('BPGExcelsiorCapsDejaVu2010.eot?#iefix') format('embedded-opentype'),
+        url('BPGExcelsiorCapsDejaVu2010.woff2') format('woff2'),
+        url('BPGExcelsiorCapsDejaVu2010.woff') format('woff'),
+        url('BPGExcelsiorCapsDejaVu2010.ttf') format('truetype'),
+        url('BPGExcelsiorCapsDejaVu2010.svg#BPGExcelsiorCapsDejaVu2010') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 @font-face {
-    font-family: 'BPG Nino Mkhedruli';
-    src: url('../fonts/bpg-nino-mkhedruli-webfont.eot'); /* IE9 Compat Modes */
-    src: url('../fonts/bpg-nino-mkhedruli-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/bpg-nino-mkhedruli-webfont.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/bpg-nino-mkhedruli-webfont.woff') format('woff'), /* Pretty Modern Browsers */
-         url('../fonts/bpg-nino-mkhedruli-webfont.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/bpg-nino-mkhedruli-webfont.svg#bpg_nino_mkhedruliregular') format('svg'); /* Legacy iOS */
+    font-family: 'BPG Excelsior DejaVu 2010';
+    src: url('BPGExcelsiorDejaVu2010.eot');
+    src: url('BPGExcelsiorDejaVu2010.eot?#iefix') format('embedded-opentype'),
+        url('BPGExcelsiorDejaVu2010.woff2') format('woff2'),
+        url('BPGExcelsiorDejaVu2010.woff') format('woff'),
+        url('BPGExcelsiorDejaVu2010.ttf') format('truetype'),
+        url('BPGExcelsiorDejaVu2010.svg#BPGExcelsiorDejaVu2010') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Open Sans';
+    src: url('OpenSans-Semibold.eot');
+    src: url('OpenSans-Semibold.eot?#iefix') format('embedded-opentype'),
+        url('OpenSans-Semibold.woff2') format('woff2'),
+        url('OpenSans-Semibold.woff') format('woff'),
+        url('OpenSans-Semibold.ttf') format('truetype'),
+        url('OpenSans-Semibold.svg#OpenSans-Semibold') format('svg');
+    font-weight: 600;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Myriad Pro';
+    src: url('MyriadPro-Regular.eot');
+    src: url('MyriadPro-Regular.eot?#iefix') format('embedded-opentype'),
+        url('MyriadPro-Regular.woff2') format('woff2'),
+        url('MyriadPro-Regular.woff') format('woff'),
+        url('MyriadPro-Regular.ttf') format('truetype'),
+        url('MyriadPro-Regular.svg#MyriadPro-Regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
+
+@font-face {
+    font-family: 'fontawesome-webfont';
+    src: url('../fonts/bpg-fontawesome-webfont-webfont.eot'); /* IE9 Compat Modes */
+    src: url('../fonts/bpg-fontawesome-webfont-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/bpg-fontawesome-webfont-webfont.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/bpg-fontawesome-webfont-webfont.woff') format('woff'), /* Pretty Modern Browsers */
+         url('../fonts/bpg-fontawesome-webfont-webfont.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/bpg-fontawesome-webfont-webfont.svg#bpg_fontawesome-webfont') format('svg'); /* Legacy iOS */
 }
