--- a/asigne/scss/page/banner.scss
+++ b/asigne/scss/page/banner.scss
@@ -13,12 +13,14 @@
               h1{
                 color: $default-green-bold; 
                 font-size: 48px;
+                font-family: 'Open Sans';
                 .next {
                   color: $default-white;
                   font-size: 48px;
                 }
               }
               .down-text{
+                font-family: 'BPG Excelsior DejaVu 2010';
                 color: $default-white;
                 margin-top: 30px;
                 font-size: 14px;
@@ -101,6 +103,7 @@
                 width: 33%;
                 height: 130px;
                 cursor: pointer;
+                transition: 0.3s;
                 .msubuqi {
                   background-image: url(../img/msubuqi.png);
                   width: 100px;
@@ -152,6 +155,7 @@
                 &.active {
                  transform: scale(1.1,1.1);
                  background-color: $default-green-bold; 
+                 transition: all linear 0.3s;
                  .under-cars{
                    color: $default-white;
                  }
@@ -181,6 +185,7 @@
               }
               .under-cars {
                 font-size: 14px;
+                font-family: 'Myriad Pro';
               }
               }
             }
@@ -206,6 +211,7 @@
                   padding: 8px 10px;
                   margin: -20px;
                   color: $default-white;
+                  font-family: 'Myriad Pro';
                   cursor: pointer;
                   transition: 0.3s;
                   &:hover{
@@ -226,17 +232,23 @@
               border-bottom-right-radius:20px;
               border-top-right-radius:20px; 
               .f75 {
-                padding-top: 25px;
+                font-size: 25px;
+                font-family: 'Myriad Pro';
+                padding-top: 20px;
                 color: $default-white;
                  transform: translateX(20%);
                }
                .c-satvirto {
-                 padding-top: 15px;
+                 font-size: 17px;
+                 font-family: 'Myriad Pro';
+                 font-family: 'BPG Excelsior Caps DejaVu 2010';
+                 padding-top: 13px;
                  color: $default-white;
                  transform: translateX(5%);
                }
                .kategory {
                  padding-top: 10px;
+                 font-family: 'Myriad Pro';
                  font-size: 14px;
                  color: $default-white;
                  transform: translateX(18%);
@@ -246,6 +258,7 @@
                  color: $default-white;
                  transform: translateX(20%);
                  margin-bottom: 10px;
+                 font-family: 'Myriad Pro';
                }
                .last {
                  padding: 10px 30px;
@@ -253,6 +266,7 @@
                  @extend .border-radius;
                  color: $default-green-bold; 
                  transition: 0.3s;
+                 font-family: 'BPG Excelsior Caps DejaVu 2010';
                  &:hover {
                    color: $default-red;
                    transition: 0.3s
@@ -263,11 +277,6 @@
         
     }
 }
-
-  @-webkit-keyframes fade {
-    from {opacity: .4} 
-    to {opacity: 1}
-  }
   @keyframes fade {
     from {opacity: .4} 
     to {opacity: 1}
