--- a/asigne/scss/page/head.scss
+++ b/asigne/scss/page/head.scss
@@ -25,6 +25,7 @@
                color: white;
                font-size: 14px;
                border: none; 
+               font-family: 'Open Sans';
               }
               .dropdown-content {
                 top: 34px;
@@ -41,6 +42,7 @@
                      text-decoration: none;
                      display: block;
                      font-size: 14px;
+                     font-family: 'Open Sans';
                      &:hover {background-color: #ddd;}
                    }
               }
@@ -61,6 +63,7 @@
                 align-items: center;
                 display: flex;
                 margin-left: 0px; 
+                font-family: 'BPG Excelsior DejaVu 2010';
                 span {
                     margin-left: 10px;
                     margin-top: 1px;
