--- a/asigne/scss/page/banner.scss
+++ b/asigne/scss/page/banner.scss
@@ -73,6 +73,8 @@
                 width: 30px;
             }
             .chat-title {
+              font-family: 'BPG Excelsior DejaVu 2010';
+              font-size: 16px;
                 width: 80px;
                 text-align: center;
                 margin-top: 10px;
