--- a/asigne/scss/page/main.scss
+++ b/asigne/scss/page/main.scss
@@ -61,6 +61,7 @@ body {
     vertical-align: middle;
         }
         a {
+            font-family: 'BPG Excelsior DejaVu 2010';
             color: #abd2c5;
             transition: 0.3s;
             font-size: 14px;
