--- a/asigne/scss/fonts.scss
+++ b/asigne/scss/fonts.scss
@@ -1,48 +1,47 @@
 @font-face {
     font-family: 'BPG Excelsior Caps DejaVu 2010';
-    src: url('BPGExcelsiorCapsDejaVu2010.eot');
-    src: url('BPGExcelsiorCapsDejaVu2010.eot?#iefix') format('embedded-opentype'),
-        url('BPGExcelsiorCapsDejaVu2010.woff2') format('woff2'),
-        url('BPGExcelsiorCapsDejaVu2010.woff') format('woff'),
-        url('BPGExcelsiorCapsDejaVu2010.ttf') format('truetype'),
-        url('BPGExcelsiorCapsDejaVu2010.svg#BPGExcelsiorCapsDejaVu2010') format('svg');
+    src: url('../fonts/BPGExcelsiorCapsDejaVu2010.eot');
+    src: url('../fonts/BPGExcelsiorCapsDejaVu2010.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/BPGExcelsiorCapsDejaVu2010.woff2') format('woff2'),
+        url('../fonts/BPGExcelsiorCapsDejaVu2010.woff') format('woff'),
+        url('../fonts/BPGExcelsiorCapsDejaVu2010.ttf') format('truetype'),
+        url('../fonts/BPGExcelsiorCapsDejaVu2010.svg#BPGExcelsiorCapsDejaVu2010') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'BPG Excelsior DejaVu 2010';
-    src: url('BPGExcelsiorDejaVu2010.eot');
-    src: url('BPGExcelsiorDejaVu2010.eot?#iefix') format('embedded-opentype'),
-        url('BPGExcelsiorDejaVu2010.woff2') format('woff2'),
-        url('BPGExcelsiorDejaVu2010.woff') format('woff'),
-        url('BPGExcelsiorDejaVu2010.ttf') format('truetype'),
-        url('BPGExcelsiorDejaVu2010.svg#BPGExcelsiorDejaVu2010') format('svg');
+    src: url('../fonts/BPG Excelsior DejaVu 2010.eot');
+    src: url('../fonts/BPG Excelsior DejaVu 2010?#iefix') format('embedded-opentype'),
+        url('../fonts/BPGExcelsiorDejaVu2010.woff2') format('woff2'),
+        url('../fonts/BPGExcelsiorDejaVu2010.woff') format('woff'),
+        url('../fonts/BPGExcelsiorDejaVu2010.ttf') format('truetype'),
+        url('../fonts/BPGExcelsiorDejaVu2010.svg#BPGExcelsiorDejaVu2010') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'Open Sans';
-    src: url('OpenSans-Semibold.eot');
-    src: url('OpenSans-Semibold.eot?#iefix') format('embedded-opentype'),
-        url('OpenSans-Semibold.woff2') format('woff2'),
-        url('OpenSans-Semibold.woff') format('woff'),
-        url('OpenSans-Semibold.ttf') format('truetype'),
-        url('OpenSans-Semibold.svg#OpenSans-Semibold') format('svg');
+    src: url('../fonts/OpenSans-Semibold.eot');
+    src: url('../fonts/OpenSans-Semibold.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/OpenSans-Semibold.woff2') format('woff2'),
+        url('../fonts/OpenSans-Semibold.woff') format('woff'),
+        url('../fonts/OpenSans-Semibold.ttf') format('truetype'),
+        url('../fonts/') format('svg');
     font-weight: 600;
     font-style: normal;
 }
 @font-face {
     font-family: 'Myriad Pro';
-    src: url('MyriadPro-Regular.eot');
-    src: url('MyriadPro-Regular.eot?#iefix') format('embedded-opentype'),
-        url('MyriadPro-Regular.woff2') format('woff2'),
-        url('MyriadPro-Regular.woff') format('woff'),
-        url('MyriadPro-Regular.ttf') format('truetype'),
-        url('MyriadPro-Regular.svg#MyriadPro-Regular') format('svg');
+    src: url('../fonts/MyriadPro-Regular.eot');
+    src: url('../fonts/MyriadPro-Regular.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/MyriadPro-Regular.woff2') format('woff2'),
+        url('../fonts/MyriadPro-Regular.woff') format('woff'),
+        url('../fonts/MyriadPro-Regular.ttf') format('truetype'),
+        url('../fonts/') format('svg');
     font-weight: normal;
     font-style: normal;
 }
-
 
 
 @font-face {
