--- a/asigne/scss/page/chatbox.scss
+++ b/asigne/scss/page/chatbox.scss
@@ -226,13 +226,11 @@ button {
   position: absolute;
   border: 0;
   font-size: 1em;
-  background-color: $secondary;
-  top:  19px;
   opacity: 0.8;
   right: 17px;
   cursor: pointer;
   outline: 0;
-  padding-top: 20px;
+  padding: 10px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   transition: .3s;
