--- a/asigne/scss/page/main.scss
+++ b/asigne/scss/page/main.scss
@@ -147,6 +147,7 @@ body {
                 margin-top: 20px;
                 margin-left: 0px;
                 a {
+                    font-family: 'BPG Excelsior DejaVu 2010';
                     font-size: 30px;
                     color: $default-white;
                     transition: 0.3s;
