--- a/asigne/scss/page/main.scss
+++ b/asigne/scss/page/main.scss
@@ -11,6 +11,7 @@ body {
 	height: 120px;
 	align-items: center;
     .head-child {
+        // margin: 0 5px;
          width: 100%;
 	     justify-content: space-between;
 	     align-items: center;
