--- a/asigne/scss/page/responsive.scss
+++ b/asigne/scss/page/responsive.scss
@@ -1,3 +1,14 @@
+@media only screen and (max-width : 1400px){
+    .sail{
+        right: 5px!important;
+    }
+    .seilings {
+        width: 97%;
+    }
+    .center {
+        width: 97%!important;
+    }
+}
 @media only screen and (max-width : 1200px){
     .center {
         width: 95%;
