--- a/asigne/scss/page/main.scss
+++ b/asigne/scss/page/main.scss
@@ -79,13 +79,14 @@ body {
 
 .burger{
     display: none;
-	width: 130px;
-    height: 85px;
-    border-left: 3px solid $default-blue;
+    width: 130px;
+    height: calc(100% - 35px );
+    border-left: 3px solid #3a676b;
     align-items: center;
     justify-content: center;
-    position: relative; 
-    margin-top: 34px;
+    position: absolute;
+    right: 0px;
+    top: 35px;
     .inside-burger {
        width: 40px;
 	   height: 40px;
