--- a/bet-project/scss/pages/wallet.scss
+++ b/bet-project/scss/pages/wallet.scss
@@ -9,8 +9,7 @@
         flex-direction: column;
         font-family: Helvetica;
         .wallet-button {
-            @include button( 150px, $default-white , $default-black, 40px)
-            
+            @include button( 150px, $default-white , $default-black, 40px);
         }
     }
 }
