--- a/bet-project/scss/modules/mixin.scss
+++ b/bet-project/scss/modules/mixin.scss
@@ -15,6 +15,7 @@
   padding: 10px 15px 10px 15px;
   width: $width;
   height: 40px;
+  font-family: Helvetica;
   margin-top: $margin-top;
   cursor: pointer;
   font-size: 12px;
