--- a/bet-project/scss/pages/header.scss
+++ b/bet-project/scss/pages/header.scss
@@ -14,7 +14,7 @@
     .logo{
         margin: 0 10px;
         cursor: pointer;
-        a{
+        .logo__Text{
             font-size: 34px;
             color: $default-dark-text-color;
             position: relative;
