--- a/bet-project/scss/pages/header.scss
+++ b/bet-project/scss/pages/header.scss
@@ -68,7 +68,7 @@
         padding: 5px;
         border-radius: 5px;
     .dropdown-list-item{
-	fotn-size: 16px;
+	font-size: 16px;
         color: $default-text-color;
         margin: 5px 0;
         transition: 0.3s;
