--- a/test-scss/scss/fonts.scss
+++ b/test-scss/scss/fonts.scss
@@ -1,24 +1,25 @@
 @font-face {
-    font-family: 'nucleo-icons';
-    src: url('../fonts/nucleo-icons.eot');
-    src: url('../fonts/nucleo-icons.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/nucleo-icons.woff2') format('woff2'),
-        url('../fonts/nucleo-icons.woff') format('woff'),
-        url('../fonts/nucleo-icons.ttf') format('truetype'),
-        url('../fonts/nucleo-icons.svg#nucleo-icons') format('svg');
+    font-family: 'HelveticaNeueLTGEO-75Bold';
+    src: url('../fonts/HelveticaNeueLTGEO-75Bold.eot');
+    src: url('../fonts/HelveticaNeueLTGEO-75Bold.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/HelveticaNeueLTGEO-75Bold.svg#HelveticaNeueLTGEO-75Bold') format('svg'),
+         url('../fonts/HelveticaNeueLTGEO-75Bold.ttf') format('truetype'),
+         url('../fonts/HelveticaNeueLTGEO-75Bold.woff') format('woff'),
+         url('../fonts/HelveticaNeueLTGEO-75Bold.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
-}
+  }
 
-@font-face {
-    font-family: 'FontAwesome';
-    src: url('../fonts/FontAwesome.eot');
-    src: url('../fonts/FontAwesome.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/FontAwesome.woff2') format('woff2'),
-        url('../fonts/FontAwesome.woff') format('woff'),
-        url('../fonts/FontAwesome.ttf') format('truetype'),
-        url('../fonts/FontAwesome.svg#FontAwesome') format('svg');
+  @font-face {
+    font-family: 'HelveticaNeueLTGEO-55Roman';
+    src: url('../fonts/HelveticaNeueLTGEO-55Roman.eot');
+    src: url('../fonts/HelveticaNeueLTGEO-55Roman.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/HelveticaNeueLTGEO-55Roman.svg#HelveticaNeueLTGEO-55Roman') format('svg'),
+         url('../fonts/HelveticaNeueLTGEO-55Roman.ttf') format('truetype'),
+         url('../fonts/HelveticaNeueLTGEO-55Roman.woff') format('woff'),
+         url('../fonts/HelveticaNeueLTGEO-55Roman.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
-}
+  }
+  
 
