--- a/test-scss/scss/style.scss
+++ b/test-scss/scss/style.scss
@@ -1,7 +1,11 @@
+@import 'mixin';
 @import "variable";
 @import "reset";
 @import "base";
 @import "fonts";
 @import "page/main";
 @import "function"; 
-@import "page/toolbar-menu";
+@import './checkbox.scss';
+* {
+    outline: none;
+}
