--- a/test-scss/scss/page/main.scss
+++ b/test-scss/scss/page/main.scss
@@ -131,3 +131,68 @@ body {
         z-index: 111;
     }
 }
+.premiup__prizes {
+    padding: 100px 0;
+    .left__side {
+        .block {
+            height: 160px;
+            border: 1px solid $border;
+            border-radius: 10px;
+            img {
+                max-width: 80%;
+            }
+        }
+    }
+}
+.popular__courses {
+    padding: 60px 0;
+    .main {
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        grid-template-rows: repeat(auto,1fr);
+        grid-column-gap: 30px;
+        grid-row-gap: 20px;
+        .block {
+            .up__side,
+            .img-block {
+                border-top-left-radius: 10px;
+                border-top-right-radius: 10px;
+                min-height: 190px;
+            }
+            .down__side {
+                background-color: $white;
+                border-bottom-left-radius: 10px;
+                border-bottom-right-radius: 10px;
+                .bottom {
+                    .left__side {
+                        border-left: 5px solid $blue;
+                        .like__remove {
+                            position: relative;
+                            color: $light-text;
+                            &::after {
+                                position: absolute;
+                                content: '';
+                                width: 100%;
+                                height: 1px;
+                                background-color: $light-text;
+                                top: 50%;
+                                left: 0;
+                            }
+                        }
+                    }
+                }
+            }
+            &:nth-child(2) {
+                .left__side {
+                    border-color: $orange;
+                }
+            }
+            &:nth-child(3) {
+                .left__side {
+                    border-color: $purple;
+                }
+            }
+
+        }
+    }
+}
