--- a/test-scss/scss/variable.scss
+++ b/test-scss/scss/variable.scss
@@ -158,3 +158,71 @@ $value in $number_varriables {
         // opacity: 0.7;
     }
 }
+.blue-hover-button {
+    padding: 11px 15px;
+    font-size: 14px;
+    background-color: $white;
+    transition: 0.3s;
+    border: none;
+    color: $blue;
+    border: 1px solid $blue;
+    border-radius: 10px;
+    height: 40px;
+    &:hover {
+        background-color: $blue;
+        color: $white;
+        transition: 0.3s;
+        // opacity: 0.7;
+    }
+}
+.orange-hover-button {
+    padding: 11px 15px;
+    font-size: 14px;
+    background-color: $white;
+    transition: 0.3s;
+    border: none;
+    color: $orange;
+    border: 1px solid $orange;
+    border-radius: 10px;
+    height: 40px;
+    &:hover {
+        background-color: $orange;
+        color: $white;
+        transition: 0.3s;
+        // opacity: 0.7;
+    }
+}
+.yellow-hover-button {
+    padding: 11px 15px;
+    font-size: 14px;
+    background-color: $white;
+    transition: 0.3s;
+    border: none;
+    color: $yellow;
+    border: 1px solid $yellow;
+    border-radius: 10px;
+    height: 40px;
+    &:hover {
+        background-color: $yellow;
+        color: $white;
+        transition: 0.3s;
+        // opacity: 0.7;
+    }
+}
+.purple-hover-button {
+    padding: 11px 15px;
+    font-size: 14px;
+    background-color: $white;
+    transition: 0.3s;
+    border: none;
+    color: $purple;
+    border: 1px solid $purple;
+    border-radius: 10px;
+    height: 40px;
+    &:hover {
+        background-color: $purple;
+        color: $white;
+        transition: 0.3s;
+        // opacity: 0.7;
+    }
+}
