--- a/test-scss/scss/variable.scss
+++ b/test-scss/scss/variable.scss
@@ -128,6 +128,9 @@ $value in $number_varriables {
 .border-bottom {
     border-bottom: 1px solid #3b4755;
 }
+.border-top {
+    border-top: 1px solid #EEEEEE;
+}
 
 .blue-button {
     padding: 11px 15px;
